Apply translation memory

--- a/l10n/po/ja_JP/_generated-config/latest/config/quarkus-datasource-config-group-data-source-build-time-config.adoc.po
+++ b/l10n/po/ja_JP/_generated-config/latest/config/quarkus-datasource-config-group-data-source-build-time-config.adoc.po
@@ -133,7 +133,7 @@ msgstr ""
 #: upstream/_generated-config/latest/config/quarkus-datasource-config-group-data-source-build-time-config.adoc:127
 #, no-wrap
 msgid "`false`"
-msgstr ""
+msgstr "`false`"
 
 #. type: Table
 #: upstream/_generated-config/latest/config/quarkus-datasource-config-group-data-source-build-time-config.adoc:63
