--- a/l10n/po/ja_JP/_generated-config/latest/config/quarkus-micrometer-config-group-config-micrometer-config-export-config.adoc.po
+++ b/l10n/po/ja_JP/_generated-config/latest/config/quarkus-micrometer-config-group-config-micrometer-config-export-config.adoc.po
@@ -183,7 +183,7 @@ msgstr ""
 #: upstream/_generated-config/latest/config/quarkus-micrometer-config-group-config-micrometer-config-export-config.adoc:76
 #, no-wrap
 msgid "`true`"
-msgstr ""
+msgstr "`true`"
 
 #. type: Block title
 #: upstream/_generated-config/latest/config/quarkus-micrometer-config-group-config-micrometer-config-export-config.adoc:80
