--- a/l10n/po/ja_JP/_generated-config/latest/config/quarkus-redis-client-general-config-items.adoc.po
+++ b/l10n/po/ja_JP/_generated-config/latest/config/quarkus-redis-client-general-config-items.adoc.po
@@ -79,7 +79,7 @@ msgstr ""
 #: upstream/_generated-config/latest/config/quarkus-redis-client-general-config-items.adoc:768
 #, no-wrap
 msgid "boolean"
-msgstr ""
+msgstr "boolean"
 
 #. type: Table
 #: upstream/_generated-config/latest/config/quarkus-redis-client-general-config-items.adoc:21
@@ -90,7 +90,7 @@ msgstr ""
 #: upstream/_generated-config/latest/config/quarkus-redis-client-general-config-items.adoc:433
 #, no-wrap
 msgid "`true`"
-msgstr ""
+msgstr "`true`"
 
 #. type: Table
 #: upstream/_generated-config/latest/config/quarkus-redis-client-general-config-items.adoc:26
@@ -851,7 +851,7 @@ msgstr ""
 #: upstream/_generated-config/latest/config/quarkus-redis-client-general-config-items.adoc:771
 #, no-wrap
 msgid "`false`"
-msgstr ""
+msgstr "`false`"
 
 #. type: Table
 #: upstream/_generated-config/latest/config/quarkus-redis-client-general-config-items.adoc:452
