--- a/l10n/po/ja_JP/_generated-config/latest/config/quarkus-vertx-http-config-group-server-ssl-config.adoc.po
+++ b/l10n/po/ja_JP/_generated-config/latest/config/quarkus-vertx-http-config-group-server-ssl-config.adoc.po
@@ -269,10 +269,10 @@ msgstr ""
 #: upstream/_generated-config/latest/config/quarkus-vertx-http-config-group-server-ssl-config.adoc:143
 #, no-wrap
 msgid "boolean"
-msgstr ""
+msgstr "boolean"
 
 #. type: Table
 #: upstream/_generated-config/latest/config/quarkus-vertx-http-config-group-server-ssl-config.adoc:145
 #, no-wrap
 msgid "`false`"
-msgstr ""
+msgstr "`false`"
