--- a/l10n/po/ja_JP/_guides/amazon-s3.adoc.po
+++ b/l10n/po/ja_JP/_guides/amazon-s3.adoc.po
@@ -81,7 +81,7 @@ msgstr "IDE"
 #. type: Plain text
 #: upstream/_guides/amazon-s3.adoc:32
 msgid "Apache Maven {maven-version}"
-msgstr ""
+msgstr "Apache Maven {maven-version}"
 
 #. type: Plain text
 #: upstream/_guides/amazon-s3.adoc:33
