--- a/l10n/po/ja_JP/_guides/config-mappings.adoc.po
+++ b/l10n/po/ja_JP/_guides/config-mappings.adoc.po
@@ -183,7 +183,7 @@ msgstr ""
 #: upstream/_guides/config-mappings.adoc:547
 #, no-wrap
 msgid "application.properties"
-msgstr ""
+msgstr "application.properties"
 
 #. type: delimited block -
 #: upstream/_guides/config-mappings.adoc:98
@@ -596,7 +596,7 @@ msgstr ""
 #: upstream/_guides/config-mappings.adoc:319
 #, no-wrap
 msgid "Collections"
-msgstr ""
+msgstr "コレクション"
 
 #. type: Plain text
 #: upstream/_guides/config-mappings.adoc:322
@@ -671,7 +671,7 @@ msgstr ""
 #: upstream/_guides/config-mappings.adoc:360
 #, no-wrap
 msgid "Maps"
-msgstr ""
+msgstr "マップ"
 
 #. type: Plain text
 #: upstream/_guides/config-mappings.adoc:363
@@ -706,7 +706,7 @@ msgstr ""
 #: upstream/_guides/config-mappings.adoc:389
 #, no-wrap
 msgid "Defaults"
-msgstr ""
+msgstr "デフォルト"
 
 #. type: Plain text
 #: upstream/_guides/config-mappings.adoc:393
@@ -740,7 +740,7 @@ msgstr ""
 #: upstream/_guides/config-mappings.adoc:408
 #, no-wrap
 msgid "Validation"
-msgstr ""
+msgstr "バリデーション"
 
 #. type: Plain text
 #: upstream/_guides/config-mappings.adoc:412
@@ -793,7 +793,7 @@ msgstr ""
 #: upstream/_guides/config-mappings.adoc:492
 #, no-wrap
 msgid "package org.acme.config;\n"
-msgstr ""
+msgstr "package org.acme.config;\n"
 
 #. type: delimited block -
 #: upstream/_guides/config-mappings.adoc:441
@@ -802,6 +802,8 @@ msgid ""
 "import io.quarkus.arc.config.ConfigProperties;\n"
 "import java.util.Optional;\n"
 msgstr ""
+"import io.quarkus.arc.config.ConfigProperties;\n"
+"import java.util.Optional;\n"
 
 #. type: delimited block -
 #: upstream/_guides/config-mappings.adoc:444
@@ -810,6 +812,8 @@ msgid ""
 "@ConfigProperties(prefix = \"greeting\") <1>\n"
 "public class GreetingConfiguration {\n"
 msgstr ""
+"@ConfigProperties(prefix = \"greeting\") <1>\n"
+"public class GreetingConfiguration {\n"
 
 #. type: delimited block -
 #: upstream/_guides/config-mappings.adoc:448
@@ -819,6 +823,9 @@ msgid ""
 "    private String suffix = \"!\"; <2>\n"
 "    private Optional<String> name;\n"
 msgstr ""
+"    private String message;\n"
+"    private String suffix = \"!\"; <2>\n"
+"    private Optional<String> name;\n"
 
 #. type: delimited block -
 #: upstream/_guides/config-mappings.adoc:452
@@ -828,6 +835,9 @@ msgid ""
 "        return message;\n"
 "    }\n"
 msgstr ""
+"    public String getMessage() {\n"
+"        return message;\n"
+"    }\n"
 
 #. type: delimited block -
 #: upstream/_guides/config-mappings.adoc:456
@@ -837,6 +847,9 @@ msgid ""
 "        this.message = message;\n"
 "    }\n"
 msgstr ""
+"    public void setMessage(String message) {\n"
+"        this.message = message;\n"
+"    }\n"
 
 #. type: delimited block -
 #: upstream/_guides/config-mappings.adoc:460
@@ -846,6 +859,9 @@ msgid ""
 "        return suffix;\n"
 "    }\n"
 msgstr ""
+"    public String getSuffix() {\n"
+"        return suffix;\n"
+"    }\n"
 
 #. type: delimited block -
 #: upstream/_guides/config-mappings.adoc:464
@@ -855,6 +871,9 @@ msgid ""
 "        this.suffix = suffix;\n"
 "    }\n"
 msgstr ""
+"    public void setSuffix(String suffix) {\n"
+"        this.suffix = suffix;\n"
+"    }\n"
 
 #. type: delimited block -
 #: upstream/_guides/config-mappings.adoc:468
@@ -864,6 +883,9 @@ msgid ""
 "        return name;\n"
 "    }\n"
 msgstr ""
+"    public Optional<String> getName() {\n"
+"        return name;\n"
+"    }\n"
 
 #. type: delimited block -
 #: upstream/_guides/config-mappings.adoc:473
@@ -874,16 +896,20 @@ msgid ""
 "    }\n"
 "}\n"
 msgstr ""
+"    public void setName(Optional<String> name) {\n"
+"        this.name = name;\n"
+"    }\n"
+"}\n"
 
 #. type: Plain text
 #: upstream/_guides/config-mappings.adoc:477
 msgid "`prefix` is optional. If not set then the prefix to be used will be determined by the class name. In this case it would still be `greeting` (since the `Configuration` suffix is removed). If the class were named `GreetingExtraConfiguration` then the resulting default prefix would be `greeting-extra`."
-msgstr ""
+msgstr "`prefix` は任意です。設定していない場合は、使用される接頭辞はクラス名によって決まります。この場合も (`Configuration` の接尾辞は削除されているため) `greeting` となります。クラス名が `GreetingExtraConfiguration` の場合は、デフォルトの接頭辞が `greeting-extra` となります。"
 
 #. type: Plain text
 #: upstream/_guides/config-mappings.adoc:478
 msgid "`!` will be the default value if `greeting.suffix` is not set."
-msgstr ""
+msgstr "`!` は、`greeting.suffix` が設定されていない場合のデフォルト値になります。"
 
 #. type: Plain text
 #: upstream/_guides/config-mappings.adoc:480
@@ -897,6 +923,8 @@ msgid ""
 "@Inject\n"
 "GreetingConfiguration greetingConfiguration;\n"
 msgstr ""
+"@Inject\n"
+"GreetingConfiguration greetingConfiguration;\n"
 
 #. type: Plain text
 #: upstream/_guides/config-mappings.adoc:488
@@ -911,6 +939,9 @@ msgid ""
 "import org.eclipse.microprofile.config.inject.ConfigProperty;\n"
 "import java.util.Optional;\n"
 msgstr ""
+"import io.quarkus.arc.config.ConfigProperties;\n"
+"import org.eclipse.microprofile.config.inject.ConfigProperty;\n"
+"import java.util.Optional;\n"
 
 #. type: delimited block -
 #: upstream/_guides/config-mappings.adoc:499
@@ -919,6 +950,8 @@ msgid ""
 "@ConfigProperties(prefix = \"greeting\")\n"
 "public interface GreetingConfiguration {\n"
 msgstr ""
+"@ConfigProperties(prefix = \"greeting\")\n"
+"public interface GreetingConfiguration {\n"
 
 #. type: delimited block -
 #: upstream/_guides/config-mappings.adoc:502
@@ -927,6 +960,8 @@ msgid ""
 "    @ConfigProperty(name = \"message\") <1>\n"
 "    String message();\n"
 msgstr ""
+"    @ConfigProperty(name = \"message\") <1>\n"
+"    String message();\n"
 
 #. type: delimited block -
 #: upstream/_guides/config-mappings.adoc:505
@@ -935,6 +970,8 @@ msgid ""
 "    @ConfigProperty(defaultValue = \"!\")\n"
 "    String getSuffix(); <2>\n"
 msgstr ""
+"    @ConfigProperty(defaultValue = \"!\")\n"
+"    String getSuffix(); <2>\n"
 
 #. type: delimited block -
 #: upstream/_guides/config-mappings.adoc:508
@@ -943,6 +980,8 @@ msgid ""
 "    Optional<String> getName(); <3>\n"
 "}\n"
 msgstr ""
+"    Optional<String> getName(); <3>\n"
+"}\n"
 
 #. type: Plain text
 #: upstream/_guides/config-mappings.adoc:511
@@ -968,12 +1007,13 @@ msgstr ""
 #: upstream/_guides/config-mappings.adoc:519
 #, no-wrap
 msgid "Additional notes on @ConfigProperties"
-msgstr ""
+msgstr "@ConfigProperties に関する追加の注意事項"
 
 #. type: Plain text
 #: upstream/_guides/config-mappings.adoc:523
+#, fuzzy
 msgid "When using a regular class annotated with `@ConfigProperties` the class doesn't necessarily have to declare getters and setters. Having simple public non-final fields is valid as well."
-msgstr ""
+msgstr "`@ConfigProperties` でアノテーションされた通常のクラスを使用する場合、クラスは必ずしも getter および setter を宣言する必要はありません。単純でパブリックな確定的でないフィールドを持つことも有効です。"
 
 #. type: Plain text
 #: upstream/_guides/config-mappings.adoc:526
@@ -989,6 +1029,8 @@ msgid ""
 "@ConfigProperties(prefix = \"greeting\")\n"
 "public class GreetingConfiguration {\n"
 msgstr ""
+"@ConfigProperties(prefix = \"greeting\")\n"
+"public class GreetingConfiguration {\n"
 
 #. type: delimited block -
 #: upstream/_guides/config-mappings.adoc:536
@@ -999,6 +1041,10 @@ msgid ""
 "    public Optional<String> name;\n"
 "    public ContentConfig content; <1>\n"
 msgstr ""
+"    public String message;\n"
+"    public String suffix = \"!\";\n"
+"    public Optional<String> name;\n"
+"    public ContentConfig content; <1>\n"
 
 #. type: delimited block -
 #: upstream/_guides/config-mappings.adoc:542
@@ -1010,11 +1056,16 @@ msgid ""
 "    }\n"
 "}\n"
 msgstr ""
+"    public static class ContentConfig {\n"
+"        public Integer prizeAmount;\n"
+"        public List<String> recipients;\n"
+"    }\n"
+"}\n"
 
 #. type: Plain text
 #: upstream/_guides/config-mappings.adoc:544
 msgid "The name of the field (not the class name) will determine the name of the properties that are bound to the object."
-msgstr ""
+msgstr "フィールドの名前 (クラス名ではありません) は、オブジェクトにバインドされるプロパティーの名前を決定します。"
 
 #. type: Plain text
 #: upstream/_guides/config-mappings.adoc:546
@@ -1030,6 +1081,10 @@ msgid ""
 "greeting.content.prize-amount=10\n"
 "greeting.content.recipients=Jane,John\n"
 msgstr ""
+"greeting.message = hello\n"
+"greeting.name = quarkus\n"
+"greeting.content.prize-amount=10\n"
+"greeting.content.recipients=Jane,John\n"
 
 #. type: Plain text
 #: upstream/_guides/config-mappings.adoc:557
@@ -1045,6 +1100,9 @@ msgid ""
 "    public String message;\n"
 "    public String suffix = \"!\";\n"
 msgstr ""
+"    @Size(min = 20)\n"
+"    public String message;\n"
+"    public String suffix = \"!\";\n"
 
 #. type: delimited block -
 #: upstream/_guides/config-mappings.adoc:568
@@ -1059,7 +1117,7 @@ msgstr ""
 #: upstream/_guides/config-mappings.adoc:572
 #, no-wrap
 msgid "Using same ConfigProperties with different prefixes"
-msgstr ""
+msgstr "同じ ConfigProperties で異なる接頭辞を使用"
 
 #. type: Plain text
 #: upstream/_guides/config-mappings.adoc:577
@@ -1074,6 +1132,8 @@ msgid ""
 "@ApplicationScoped\n"
 "public class SomeBean {\n"
 msgstr ""
+"@ApplicationScoped\n"
+"public class SomeBean {\n"
 
 #. type: delimited block -
 #: upstream/_guides/config-mappings.adoc:597
@@ -1082,6 +1142,8 @@ msgid ""
 "    @Inject <1>\n"
 "    GreetingConfiguration greetingConfiguration;\n"
 msgstr ""
+"    @Inject <1>\n"
+"    GreetingConfiguration greetingConfiguration;\n"
 
 #. type: delimited block -
 #: upstream/_guides/config-mappings.adoc:600
@@ -1090,16 +1152,18 @@ msgid ""
 "    @ConfigPrefix(\"other\") <2>\n"
 "    GreetingConfiguration otherConfiguration;\n"
 msgstr ""
+"    @ConfigPrefix(\"other\") <2>\n"
+"    GreetingConfiguration otherConfiguration;\n"
 
 #. type: Plain text
 #: upstream/_guides/config-mappings.adoc:605
 msgid "At this injection point `greetingConfiguration` will use the `greeting` prefix since that is what has been defined on `@ConfigProperties`."
-msgstr ""
+msgstr "この注入ポイントでは、`greetingConfiguration` は `@ConfigProperties` で定義されている `greeting` の接頭辞を使用します。"
 
 #. type: Plain text
 #: upstream/_guides/config-mappings.adoc:607
 msgid "At this injection point `otherConfiguration` will use the `other` prefix from `@ConfigPrefix` instead of the `greeting` prefix. Notice that in this case `@Inject` is not required."
-msgstr ""
+msgstr "この注入ポイントでは、`otherConfiguration` は、`greeting` の接頭辞の代わりに `@ConfigPrefix` から `other` の接頭辞を使用します。この場合、`@Inject` は必須ではないことに注意してください。"
 
 #. type: Title ===
 #: upstream/_guides/config-mappings.adoc:608
@@ -1142,7 +1206,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_guides/config-mappings.adoc:631
 msgid "`SomeBean.java`"
-msgstr ""
+msgstr "`SomeBean.java`"
 
 #. type: delimited block -
 #: upstream/_guides/config-mappings.adoc:638
