--- a/l10n/po/ja_JP/_guides/kafka.adoc.po
+++ b/l10n/po/ja_JP/_guides/kafka.adoc.po
@@ -1572,7 +1572,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_guides/kafka.adoc:706
 msgid "`java.lang.String`"
-msgstr ""
+msgstr "`java.lang.String`"
 
 #. type: Plain text
 #: upstream/_guides/kafka.adoc:707
@@ -1594,17 +1594,17 @@ msgstr "`org.apache.kafka.common.serialization.StringDeserializer`"
 #. type: Plain text
 #: upstream/_guides/kafka.adoc:710
 msgid "`io.vertx.core.buffer.Buffer`"
-msgstr ""
+msgstr "`io.vertx.core.buffer.Buffer`"
 
 #. type: Plain text
 #: upstream/_guides/kafka.adoc:711
 msgid "`io.vertx.core.json.JsonObject`"
-msgstr ""
+msgstr "`io.vertx.core.json.JsonObject`"
 
 #. type: Plain text
 #: upstream/_guides/kafka.adoc:712
 msgid "`io.vertx.core.json.JsonArray`"
-msgstr ""
+msgstr "`io.vertx.core.json.JsonArray`"
 
 #. type: Plain text
 #: upstream/_guides/kafka.adoc:713
