--- a/l10n/po/ja_JP/_guides/maven-tooling.adoc.po
+++ b/l10n/po/ja_JP/_guides/maven-tooling.adoc.po
@@ -1582,7 +1582,7 @@ msgstr ""
 #: upstream/_guides/maven-tooling.adoc:871
 #, no-wrap
 msgid "`false`"
-msgstr ""
+msgstr "`false`"
 
 #. type: Table
 #: upstream/_guides/maven-tooling.adoc:873
