--- a/l10n/po/ja_JP/_guides/mongodb-panache-kotlin.adoc.po
+++ b/l10n/po/ja_JP/_guides/mongodb-panache-kotlin.adoc.po
@@ -34,7 +34,7 @@ msgstr ""
 #: upstream/_guides/mongodb-panache-kotlin.adoc:16
 #, no-wrap
 msgid "First: an example"
-msgstr ""
+msgstr "最初に:例"
 
 #. type: Plain text
 #: upstream/_guides/mongodb-panache-kotlin.adoc:21
@@ -55,7 +55,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_guides/mongodb-panache-kotlin.adoc:34
 msgid "As you can see our entities remain simple.  There is, however, a slight difference from the Java version.  The Kotlin language doesn't support the notion of static methods in quite the same way as Java does.  Instead, we must use a https://kotlinlang.org/docs/tutorials/kotlin-for-py/objects-and-companion-objects.html#companion-objects[companion object]:"
-msgstr ""
+msgstr "ご覧のように、私たちのエンティティーはシンプルなままです。しかし、Java版とは少し違いがあります。Kotlin 言語は Java のように静的メソッドの概念をサポートしていません。その代わり、 link:https://kotlinlang.org/docs/tutorials/kotlin-for-py/objects-and-companion-objects.html#companion-objects[コンパニオンオブジェクト] を使わなければなりません。"
 
 #. type: delimited block -
 #: upstream/_guides/mongodb-panache-kotlin.adoc:43
@@ -82,7 +82,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_guides/mongodb-panache-kotlin.adoc:51
 msgid "The companion object holds all the methods not related to a specific instance allowing for general management and querying bound to a specific type."
-msgstr ""
+msgstr "コンパニオンオブジェクトは、特定のインスタンスに関連しないすべてのメソッドを保持し、特定の型にバインドされた一般的な管理とクエリを可能にします。"
 
 #. type: Plain text
 #: upstream/_guides/mongodb-panache-kotlin.adoc:54
@@ -97,19 +97,19 @@ msgstr ""
 #. type: Plain text
 #: upstream/_guides/mongodb-panache-kotlin.adoc:62
 msgid "In the Kotlin version, we've simply moved the bulk of the link:https://www.martinfowler.com/eaaCatalog/activeRecord.html[`active record pattern`] functionality to the `companion object`.  Apart from this slight change, we can then work with our types in ways that map easily from the Java side of world."
-msgstr ""
+msgstr "Kotlin版では、単純に link:https://www.martinfowler.com/eaaCatalog/activeRecord.html[`active record pattern`] の機能を `companion object` に追加しました。このわずかな変更を別にすれば、私たちは、世界のJava側から簡単にマップする方法で私たちの型を使用して作業することができます。"
 
 #. type: Title ==
 #: upstream/_guides/mongodb-panache-kotlin.adoc:64
 #, no-wrap
 msgid "Using the repository pattern"
-msgstr ""
+msgstr "リポジトリパターンの使用"
 
 #. type: Title ===
 #: upstream/_guides/mongodb-panache-kotlin.adoc:67
 #, no-wrap
 msgid "Defining your entity"
-msgstr ""
+msgstr "エンティティの定義"
 
 #. type: Plain text
 #: upstream/_guides/mongodb-panache-kotlin.adoc:70
@@ -132,7 +132,7 @@ msgstr ""
 #: upstream/_guides/mongodb-panache-kotlin.adoc:80
 #, no-wrap
 msgid "Defining your repository"
-msgstr ""
+msgstr "リポジトリの定義"
 
 #. type: Plain text
 #: upstream/_guides/mongodb-panache-kotlin.adoc:84
@@ -176,12 +176,12 @@ msgstr ""
 #: upstream/_guides/mongodb-panache-kotlin.adoc:107
 #, no-wrap
 msgid "Most useful operations"
-msgstr ""
+msgstr "最も便利な操作"
 
 #. type: Plain text
 #: upstream/_guides/mongodb-panache-kotlin.adoc:110
 msgid "Once you have written your repository, here are the most common operations you will be able to perform:"
-msgstr ""
+msgstr "リポジトリを書くことで実行可能な最も一般的な操作は以下の通りです。"
 
 #. type: delimited block -
 #: upstream/_guides/mongodb-panache-kotlin.adoc:118
@@ -301,7 +301,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_guides/mongodb-panache-kotlin.adoc:163
 msgid "All `list` methods have equivalent `stream` versions."
-msgstr ""
+msgstr "すべての `list` メソッドは、同等の `stream` バージョンがあります。"
 
 #. type: delimited block -
 #: upstream/_guides/mongodb-panache-kotlin.adoc:170
@@ -344,4 +344,4 @@ msgstr ""
 #. type: Plain text
 #: upstream/_guides/mongodb-panache-kotlin.adoc:193
 msgid "Note the addition of `-kotlin` on the end.  Generally you'll only need this version but if your project will be using both Java and Kotlin code, you can safely include both artifacts."
-msgstr ""
+msgstr "最後に `-kotlin` が追加されていることに注意してください。一般的にはこのバージョンだけが必要ですが、もしあなたのプロジェクトがJavaとKotlinの両方のコードを使うのであれば、両方の成果物を安全に含めることができます。"
