--- a/l10n/po/ja_JP/_guides/performance-measure.adoc.po
+++ b/l10n/po/ja_JP/_guides/performance-measure.adoc.po
@@ -165,7 +165,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_guides/performance-measure.adoc:63
 msgid "For example:"
-msgstr ""
+msgstr "例えば、以下のようになります。"
 
 #. type: delimited block -
 #: upstream/_guides/performance-measure.adoc:67
