--- a/l10n/po/ja_JP/_guides/rest-client-reactive.adoc.po
+++ b/l10n/po/ja_JP/_guides/rest-client-reactive.adoc.po
@@ -39,12 +39,12 @@ msgstr ""
 #: upstream/_guides/rest-client-reactive.adoc:16
 #, no-wrap
 msgid "Prerequisites"
-msgstr ""
+msgstr "前提条件"
 
 #. type: Plain text
 #: upstream/_guides/rest-client-reactive.adoc:19
 msgid "To complete this guide, you need:"
-msgstr ""
+msgstr "このガイドを完成させるには、以下が必要です:"
 
 #. type: Plain text
 #: upstream/_guides/rest-client-reactive.adoc:21
@@ -54,7 +54,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_guides/rest-client-reactive.adoc:22
 msgid "an IDE"
-msgstr ""
+msgstr "IDE"
 
 #. type: Plain text
 #: upstream/_guides/rest-client-reactive.adoc:23
@@ -64,23 +64,23 @@ msgstr ""
 #. type: Plain text
 #: upstream/_guides/rest-client-reactive.adoc:24
 msgid "Apache Maven {maven-version}"
-msgstr ""
+msgstr "Apache Maven {maven-version}"
 
 #. type: Title ==
 #: upstream/_guides/rest-client-reactive.adoc:25
 #, no-wrap
 msgid "Solution"
-msgstr ""
+msgstr "ソリューション"
 
 #. type: Plain text
 #: upstream/_guides/rest-client-reactive.adoc:29
 msgid "We recommend that you follow the instructions in the next sections and create the application step by step.  However, you can go right to the completed example."
-msgstr ""
+msgstr "次の章で紹介する手順に沿って、ステップを踏んでアプリを作成することをお勧めします。ただし、完成した例にそのまま進んでも構いません。"
 
 #. type: Plain text
 #: upstream/_guides/rest-client-reactive.adoc:31
 msgid "Clone the Git repository: `git clone {quickstarts-clone-url}`, or download an {quickstarts-archive-url}[archive]."
-msgstr ""
+msgstr "Gitレポジトリをクローンするか `git clone {quickstarts-clone-url}` 、 {quickstarts-archive-url}[アーカイブ] をダウンロードします。"
 
 #. type: Plain text
 #: upstream/_guides/rest-client-reactive.adoc:33
@@ -96,7 +96,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_guides/rest-client-reactive.adoc:37
 msgid "First, we need a new project. Create a new project with the following command:"
-msgstr ""
+msgstr "まず、新しいプロジェクトが必要です。以下のコマンドで新規プロジェクトを作成します。"
 
 #. type: delimited block -
 #: upstream/_guides/rest-client-reactive.adoc:47
@@ -114,7 +114,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_guides/rest-client-reactive.adoc:50
 msgid "This command generates the Maven project with a REST endpoint and imports:"
-msgstr ""
+msgstr "このコマンドは、REST エンドポイントを持つ Maven プロジェクトを生成し、 `rest-client` と `resteasy-jackson` のエクステンションをインポートします。"
 
 #. type: Plain text
 #: upstream/_guides/rest-client-reactive.adoc:52
@@ -140,7 +140,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_guides/rest-client-reactive.adoc:63
 msgid "This will add the following to your `pom.xml`:"
-msgstr ""
+msgstr "これにより、 `pom.xml` に以下が追加されます:"
 
 #. type: delimited block -
 #: upstream/_guides/rest-client-reactive.adoc:70
@@ -156,17 +156,17 @@ msgstr ""
 #: upstream/_guides/rest-client-reactive.adoc:72
 #, no-wrap
 msgid "Setting up the model"
-msgstr ""
+msgstr "モデルの設定"
 
 #. type: Plain text
 #: upstream/_guides/rest-client-reactive.adoc:76
 msgid "In this guide we will be demonstrating how to consume part of the REST API supplied by the link:https://restcountries.eu[restcountries.eu] service.  Our first order of business is to setup the model we will be using, in the form of a `Country` POJO."
-msgstr ""
+msgstr "このガイドでは、 link:https://restcountries.eu[restcountries.eu] サービスが提供するREST APIの一部を利用する方法をデモします。まず最初に、 `Country` POJO の形式で使用するモデルをセットアップします。"
 
 #. type: Plain text
 #: upstream/_guides/rest-client-reactive.adoc:78
 msgid "Create a `src/main/java/org/acme/rest/client/Country.java` file and set the following content:"
-msgstr ""
+msgstr "`src/main/java/org/acme/rest/client/Country.java` ファイルを作成し、以下の内容を設定します。"
 
 #. type: delimited block -
 #: upstream/_guides/rest-client-reactive.adoc:82
@@ -221,13 +221,13 @@ msgstr ""
 #. type: Plain text
 #: upstream/_guides/rest-client-reactive.adoc:102
 msgid "The model above is only a subset of the fields provided by the service (thus the `@JsonIgnoreProperties` annotation), but it suffices for the purposes of this guide."
-msgstr ""
+msgstr "上記のモデルは、サービスによって提供されるフィールドのサブセットに過ぎません(`@JsonIgnoreProperties` アノテーションによる)が、このガイドの目的には十分です。"
 
 #. type: Title ==
 #: upstream/_guides/rest-client-reactive.adoc:103
 #, no-wrap
 msgid "Create the interface"
-msgstr ""
+msgstr "インターフェースの作成"
 
 #. type: Plain text
 #: upstream/_guides/rest-client-reactive.adoc:106
@@ -264,6 +264,9 @@ msgid ""
 "@RegisterRestClient\n"
 "public interface CountriesService {\n"
 msgstr ""
+"@Path(\"/v2\")\n"
+"@RegisterRestClient\n"
+"public interface CountriesService {\n"
 
 #. type: delimited block -
 #: upstream/_guides/rest-client-reactive.adoc:127
@@ -277,8 +280,9 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/rest-client-reactive.adoc:131
+#, fuzzy
 msgid "The `getByName` method gives our code the ability to query a country by name from the REST Countries API.  The client will handle all the networking and marshalling leaving our code clean of such technical details."
-msgstr ""
+msgstr "`getByName` メソッドは、私たちのコードに、REST Countries API から名前を指定して国を問い合わせる機能を与えます。クライアントがすべてのネットワーキングとマーシャリングを処理してくれるので、このような技術的な詳細は一切ありません。"
 
 #. type: delimited block =
 #: upstream/_guides/rest-client-reactive.adoc:135
@@ -288,22 +292,22 @@ msgstr ""
 #. type: Plain text
 #: upstream/_guides/rest-client-reactive.adoc:138
 msgid "The purpose of the annotations in the code above is the following:"
-msgstr ""
+msgstr "上のコードのアノテーションの目的は以下の通りです。"
 
 #. type: Plain text
 #: upstream/_guides/rest-client-reactive.adoc:141
 msgid "`@RegisterRestClient` allows Quarkus to know that this interface is meant to be available for CDI injection as a REST Client"
-msgstr ""
+msgstr "`@RegisterRestClient` により、Quarkusは、このインターフェイスがRESTクライアントとしてCDIインジェクションに利用可能であることを知ることができます。"
 
 #. type: Plain text
 #: upstream/_guides/rest-client-reactive.adoc:142
 msgid "`@Path`, `@GET` and `@PathParam` are the standard JAX-RS annotations used to define how to access the service"
-msgstr ""
+msgstr "`@Path` 、 `@GET` 、 `@PathParam` は、サービスへのアクセス方法を定義するために使用される標準的な JAX-RS アノテーションです。"
 
 #. type: Plain text
 #: upstream/_guides/rest-client-reactive.adoc:143
 msgid "`@Produces` defines the expected content-type"
-msgstr ""
+msgstr "`@Produces` は、期待されるコンテンツタイプを定義しています。"
 
 #. type: delimited block =
 #: upstream/_guides/rest-client-reactive.adoc:148
@@ -313,7 +317,7 @@ msgstr ""
 #. type: delimited block =
 #: upstream/_guides/rest-client-reactive.adoc:151
 msgid "If you don't rely on the JSON default, it is heavily recommended to annotate your endpoints with the `@Produces` and `@Consumes` annotations to define precisely the expected content-types.  It will allow to narrow down the number of JAX-RS providers (which can be seen as converters) included in the native executable."
-msgstr ""
+msgstr "JSON のデフォルトに頼らない場合は、エンドポイントに `@Produces` や `@Consumes` のアノテーションを付けて、期待されるコンテンツタイプを正確に定義することを強くお勧めします。これにより、ネイティブ実行ファイルに含まれる JAX-RS プロバイダ (コンバータとみなすことができます) の数を絞り込むことができます。"
 
 #. type: delimited block =
 #: upstream/_guides/rest-client-reactive.adoc:157
@@ -324,7 +328,7 @@ msgstr ""
 #: upstream/_guides/rest-client-reactive.adoc:159
 #, no-wrap
 msgid "Query Parameters"
-msgstr ""
+msgstr "クエリのパラメータ"
 
 #. type: Plain text
 #: upstream/_guides/rest-client-reactive.adoc:163
@@ -356,12 +360,12 @@ msgstr ""
 #: upstream/_guides/rest-client-reactive.adoc:187
 #, no-wrap
 msgid "Create the configuration"
-msgstr ""
+msgstr "コンフィグレーションの作成"
 
 #. type: Plain text
 #: upstream/_guides/rest-client-reactive.adoc:191
 msgid "In order to determine the base URL to which REST calls will be made, the REST Client uses configuration from `application.properties`.  The name of the property needs to follow a certain convention which is best displayed in the following code:"
-msgstr ""
+msgstr "REST 呼び出しが行われるベース URL を決定するために、REST クライアントは `application.properties` からの設定を使用します。プロパティーの名前は、以下のコードで表示される特定の規則に従う必要があります。"
 
 #. type: delimited block -
 #: upstream/_guides/rest-client-reactive.adoc:196
@@ -374,12 +378,12 @@ msgstr ""
 #. type: Plain text
 #: upstream/_guides/rest-client-reactive.adoc:200
 msgid "Having this configuration means that all requests performed using `org.acme.rest.client.CountriesService` will use `https://restcountries.eu/rest` as the base URL.  Using the configuration above, calling the `getByName` method of `CountriesService` with a value of `France` would result in an HTTP GET request being made to `https://restcountries.eu/rest/v2/name/France`."
-msgstr ""
+msgstr "この設定をすると、 `org.acme.rest.client.CountriesService` を使用して実行されるすべてのリクエストが `https://restcountries.eu/rest` をベースURLとして使用します。上記の設定を使用して、 `CountriesService` の `getByName` メソッドを `France` の値で呼び出すと、HTTP GET リクエストが `https://restcountries.eu/rest/v2/name/France` に対して実行されます。"
 
 #. type: Plain text
 #: upstream/_guides/rest-client-reactive.adoc:202
 msgid "Note that `org.acme.rest.client.CountriesService` _must_ match the fully qualified name of the `CountriesService` interface we created in the previous section."
-msgstr ""
+msgstr "`org.acme.rest.client.CountriesService` は、前のセクションで作成した `CountriesService` インターフェイスの完全修飾名と _一致しなければならない_ ことに注意してください。"
 
 #. type: Plain text
 #: upstream/_guides/rest-client-reactive.adoc:204
@@ -415,7 +419,7 @@ msgstr ""
 #: upstream/_guides/rest-client-reactive.adoc:224
 #: upstream/_guides/rest-client-reactive.adoc:334
 msgid "Open the `src/main/java/org/acme/rest/client/CountriesResource.java` file and update it with the following content:"
-msgstr ""
+msgstr "`src/main/java/org/acme/rest/client/CountriesResource.java` ファイルを開き、以下の内容で更新してください。"
 
 #. type: delimited block -
 #: upstream/_guides/rest-client-reactive.adoc:233
@@ -444,6 +448,8 @@ msgid ""
 "@Path(\"/country\")\n"
 "public class CountriesResource {\n"
 msgstr ""
+"@Path(\"/country\")\n"
+"public class CountriesResource {\n"
 
 #. type: delimited block -
 #: upstream/_guides/rest-client-reactive.adoc:243
@@ -485,12 +491,12 @@ msgstr ""
 #: upstream/_guides/rest-client-reactive.adoc:259
 #, no-wrap
 msgid "Update the test"
-msgstr ""
+msgstr "テストの更新"
 
 #. type: Plain text
 #: upstream/_guides/rest-client-reactive.adoc:263
 msgid "We also need to update the functional test to reflect the changes made to the endpoint.  Edit the `src/test/java/org/acme/rest/client/CountriesResourceTest.java` file and change the content of the `testCountryNameEndpoint` method to:"
-msgstr ""
+msgstr "また、エンドポイントに加えられた変更を反映させるために、機能テストを更新する必要があります。 `src/test/java/org/acme/rest/client/CountriesResourceTest.java` ファイルを編集し、 `testCountryNameEndpoint` メソッドの内容を変更します。"
 
 #. type: delimited block -
 #: upstream/_guides/rest-client-reactive.adoc:271
@@ -544,13 +550,13 @@ msgstr ""
 #. type: Plain text
 #: upstream/_guides/rest-client-reactive.adoc:296
 msgid "The code above uses link:http://rest-assured.io/[REST Assured]'s link:https://github.com/rest-assured/rest-assured/wiki/GettingStarted#jsonpath[json-path] capabilities."
-msgstr ""
+msgstr "上のコードでは、 link:http://rest-assured.io/[REST Assured] の link:https://github.com/rest-assured/rest-assured/wiki/GettingStarted#jsonpath[json-path] 機能を使用しています。"
 
 #. type: Title ==
 #: upstream/_guides/rest-client-reactive.adoc:299
 #, no-wrap
 msgid "Async Support"
-msgstr ""
+msgstr "非同期サポート"
 
 #. type: Plain text
 #: upstream/_guides/rest-client-reactive.adoc:303
@@ -660,7 +666,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_guides/rest-client-reactive.adoc:376
 msgid "To test asynchronous methods, add the test method below in `CountriesResourceTest`:"
-msgstr ""
+msgstr "非同期メソッドをテストするには、`CountriesResourceTest` に以下のテストメソッドを追加します。"
 
 #. type: delimited block -
 #: upstream/_guides/rest-client-reactive.adoc:391
@@ -684,7 +690,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_guides/rest-client-reactive.adoc:394
 msgid "The `Uni` version is very similar:"
-msgstr ""
+msgstr "`Uni` 版は非常に似ています。"
 
 #. type: delimited block -
 #: upstream/_guides/rest-client-reactive.adoc:401
@@ -714,7 +720,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_guides/rest-client-reactive.adoc:422
 msgid "The `CountriesResource` becomes:"
-msgstr ""
+msgstr "`CountriesResource` は次のようになります。"
 
 #. type: delimited block -
 #: upstream/_guides/rest-client-reactive.adoc:430
@@ -741,17 +747,18 @@ msgstr ""
 #: upstream/_guides/rest-client-reactive.adoc:455
 #, no-wrap
 msgid "Mutiny"
-msgstr ""
+msgstr "Mutiny"
 
 #. type: delimited block =
 #: upstream/_guides/rest-client-reactive.adoc:458
 msgid "The previous snippet uses Mutiny reactive types, if you're not familiar with them, read the link:getting-started-reactive#mutiny[Getting Started with Reactive guide] first."
-msgstr ""
+msgstr "前のスニペットでは、Mutinyのリアクティブタイプを使用していますが、もし慣れていない場合は、まず link:getting-started-reactive#mutiny[Getting Started with Reactiveガイド] を読んでください。"
 
 #. type: Plain text
 #: upstream/_guides/rest-client-reactive.adoc:462
+#, fuzzy
 msgid "When returning a `Uni`, every _subscription_ invokes the remote service.  It means you can re-send the request by re-subscribing on the `Uni`, or use a `retry` as follows:"
-msgstr ""
+msgstr "`Uni` を返すとき、すべての _サブスクリプション_ は 、リモートサービスを呼び出します。つまり、 `Uni` で再購読してリクエストを再送信するか、以下のように `retry` を使用することができます。"
 
 #. type: delimited block -
 #: upstream/_guides/rest-client-reactive.adoc:467
@@ -776,23 +783,23 @@ msgstr ""
 #. type: Plain text
 #: upstream/_guides/rest-client-reactive.adoc:478
 msgid "If you use a `CompletionStage`, you would need to call the service's method to retry.  This difference comes from the laziness aspect of Mutiny and its subscription protocol.  More details about this can be found in https://smallrye.io/smallrye-mutiny/#_uni_and_multi[the Mutiny documentation]."
-msgstr ""
+msgstr "`CompletionStage` を使用する場合は、サービスのメソッドを呼び出して再試行する必要があります。この違いは、Mutinyとそのサブスクリプションプロトコルの lazy 性の側面から来ています。これについての詳細は Mutiny の link:https://smallrye.io/smallrye-mutiny/#_uni_and_multi[ドキュメント] を参照してください。"
 
 #. type: Title ==
 #: upstream/_guides/rest-client-reactive.adoc:479
 #, no-wrap
 msgid "Custom headers support"
-msgstr ""
+msgstr "カスタムヘッダーのサポート"
 
 #. type: Plain text
 #: upstream/_guides/rest-client-reactive.adoc:481
 msgid "The MicroProfile REST client allows amending request headers by registering a `ClientHeadersFactory` with the `@RegisterClientHeaders` annotation."
-msgstr ""
+msgstr "MicroProfile REST クライアントでは、 `ClientHeadersFactory` を `@RegisterClientHeaders` アノテーションで登録することで、リクエストヘッダを修正することができます。"
 
 #. type: Plain text
 #: upstream/_guides/rest-client-reactive.adoc:483
 msgid "Let's see it in action by adding a `@RegisterClientHeaders` annotation pointing to a `RequestUUIDHeaderFactory` class in our `CountriesService` REST interface:"
-msgstr ""
+msgstr "`CountriesService` REST インタフェースに `@RegisterClientHeaders` アノテーションを追加して、 `RequestUUIDHeaderFactory` クラスを指すようにしてみましょう。"
 
 #. type: delimited block -
 #: upstream/_guides/rest-client-reactive.adoc:496
@@ -838,7 +845,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_guides/rest-client-reactive.adoc:513
 msgid "And the `RequestUUIDHeaderFactory` would look like:"
-msgstr ""
+msgstr "そして、 `RequestUUIDHeaderFactory` は次のようになります。"
 
 #. type: delimited block -
 #: upstream/_guides/rest-client-reactive.adoc:520
@@ -887,12 +894,12 @@ msgstr ""
 #: upstream/_guides/rest-client-reactive.adoc:540
 #, no-wrap
 msgid "Default header factory"
-msgstr ""
+msgstr "デフォルトのヘッダーファクトリー"
 
 #. type: Plain text
 #: upstream/_guides/rest-client-reactive.adoc:542
 msgid "You can also use `@RegisterClientHeaders` annotation without any custom factory specified. In that case the `DefaultClientHeadersFactoryImpl` factory will be used and all headers listed in `org.eclipse.microprofile.rest.client.propagateHeaders` configuration property will be amended. Individual header names are comma-separated."
-msgstr ""
+msgstr "また、カスタムファクトリーを指定せずに `@RegisterClientHeaders` アノテーションを使用することもできます。その場合は、 `DefaultClientHeadersFactoryImpl` ファクトリーが使用され、 `org.eclipse.microprofile.rest.client.propagateHeaders` 設定プロパティに記載されているすべてのヘッダーが修正されます。個々のヘッダー名はコンマで区切られています。"
 
 #. type: delimited block -
 #: upstream/_guides/rest-client-reactive.adoc:549
@@ -997,28 +1004,28 @@ msgstr ""
 #: upstream/_guides/rest-client-reactive.adoc:612
 #, no-wrap
 msgid "Package and run the application"
-msgstr ""
+msgstr "アプリケーションをパッケージ化して実行する"
 
 #. type: Plain text
 #: upstream/_guides/rest-client-reactive.adoc:616
 msgid "Run the application with: `./mvnw compile quarkus:dev`.  Open your browser to http://localhost:8080/country/name/greece."
-msgstr ""
+msgstr "`./mvnw compile quarkus:dev` でアプリケーションを実行します。ブラウザで http://localhost:8080/country/name/greece を開きます。"
 
 #. type: Plain text
 #: upstream/_guides/rest-client-reactive.adoc:618
 msgid "You should see a JSON object containing some basic information about Greece."
-msgstr ""
+msgstr "ギリシャに関する基本情報を含む JSON オブジェクトが表示されます。"
 
 #. type: Plain text
 #: upstream/_guides/rest-client-reactive.adoc:621
 msgid "As usual, the application can be packaged using `./mvnw clean package` and executed using the `target/quarkus-app/quarkus-run.jar` file.  You can also generate the native executable with `./mvnw clean package -Pnative`."
-msgstr ""
+msgstr "いつものように、 `./mvnw clean package` を使ってアプリケーションをパッケージ化し、 `-runner.jar` ファイルを使って実行することができます。また、 `./mvnw clean package -Pnative` でネイティブ実行ファイルを生成することもできます。"
 
 #. type: Title ==
 #: upstream/_guides/rest-client-reactive.adoc:622
 #, no-wrap
 msgid "Using a Mock HTTP Server for tests"
-msgstr ""
+msgstr "テストにモックHTTPサーバーを使用する"
 
 #. type: Plain text
 #: upstream/_guides/rest-client-reactive.adoc:627
@@ -1055,7 +1062,7 @@ msgstr ""
 #: upstream/_guides/rest-client-reactive.adoc:639
 #, no-wrap
 msgid "Further reading"
-msgstr ""
+msgstr "さらに詳しく"
 
 #. type: Plain text
 #: upstream/_guides/rest-client-reactive.adoc:641
