--- a/l10n/po/ja_JP/_guides/scheduler-reference.adoc.po
+++ b/l10n/po/ja_JP/_guides/scheduler-reference.adoc.po
@@ -130,7 +130,7 @@ msgstr ""
 #: upstream/_guides/scheduler-reference.adoc:70
 #, no-wrap
 msgid "application.properties"
-msgstr ""
+msgstr "application.properties"
 
 #. type: delimited block -
 #: upstream/_guides/scheduler-reference.adoc:74
