--- a/l10n/po/ja_JP/_guides/security-jwt.adoc.po
+++ b/l10n/po/ja_JP/_guides/security-jwt.adoc.po
@@ -1888,7 +1888,7 @@ msgstr "`quarkus.log.category.\"io.quarkus.smallrye.jwt.runtime.auth.MpJwtValida
 #: upstream/_guides/security-jwt.adoc:776
 #, no-wrap
 msgid "Proactive Authentication"
-msgstr ""
+msgstr "プロアクティブ認証"
 
 #. type: Plain text
 #: upstream/_guides/security-jwt.adoc:779
