--- a/l10n/po/ja_JP/_guides/security-openid-connect-client.adoc.po
+++ b/l10n/po/ja_JP/_guides/security-openid-connect-client.adoc.po
@@ -884,7 +884,7 @@ msgstr ""
 #: upstream/_guides/security-openid-connect-client.adoc:425
 #, no-wrap
 msgid "Wiremock"
-msgstr ""
+msgstr "Wiremock"
 
 #. type: Plain text
 #: upstream/_guides/security-openid-connect-client.adoc:428
@@ -1078,7 +1078,7 @@ msgstr ""
 #: upstream/_guides/security-openid-connect-client.adoc:518
 #, no-wrap
 msgid "How to check the errors in the logs"
-msgstr ""
+msgstr "ログでエラーを確認する方法"
 
 #. type: Plain text
 #: upstream/_guides/security-openid-connect-client.adoc:521
