--- a/l10n/po/ja_JP/_guides/security-openid-connect-web-authentication.adoc.po
+++ b/l10n/po/ja_JP/_guides/security-openid-connect-web-authentication.adoc.po
@@ -1309,7 +1309,7 @@ msgstr ""
 #: upstream/_guides/security-openid-connect-web-authentication.adoc:610
 #, no-wrap
 msgid "Wiremock"
-msgstr ""
+msgstr "Wiremock"
 
 #. type: Plain text
 #: upstream/_guides/security-openid-connect-web-authentication.adoc:613
@@ -1552,7 +1552,7 @@ msgstr ""
 #: upstream/_guides/security-openid-connect-web-authentication.adoc:744
 #, no-wrap
 msgid "How to check the errors in the logs"
-msgstr ""
+msgstr "ログでエラーを確認する方法"
 
 #. type: Plain text
 #: upstream/_guides/security-openid-connect-web-authentication.adoc:747
