--- a/l10n/po/ja_JP/_guides/security-openid-connect.adoc.po
+++ b/l10n/po/ja_JP/_guides/security-openid-connect.adoc.po
@@ -1418,7 +1418,7 @@ msgstr ""
 #: upstream/_guides/security-openid-connect.adoc:794
 #, no-wrap
 msgid "How to check the errors in the logs"
-msgstr ""
+msgstr "ログでエラーを確認する方法"
 
 #. type: Plain text
 #: upstream/_guides/security-openid-connect.adoc:797
