--- a/l10n/po/ja_JP/_posts/2021-06-30-quarkus-2-0-0-final-released.adoc.po
+++ b/l10n/po/ja_JP/_posts/2021-06-30-quarkus-2-0-0-final-released.adoc.po
@@ -20,7 +20,7 @@ msgstr ""
 #: upstream/_posts/2021-06-30-quarkus-2-0-0-final-released.adoc:1
 #, no-wrap
 msgid "---\n"
-msgstr ""
+msgstr "—\n"
 
 #. type: Plain text
 #: upstream/_posts/2021-06-30-quarkus-2-0-0-final-released.adoc:8
@@ -54,7 +54,7 @@ msgstr ""
 #: upstream/_posts/2021-06-30-quarkus-2-0-0-final-released.adoc:18
 #, no-wrap
 msgid "Migration Guide"
-msgstr ""
+msgstr "移行ガイド"
 
 #. type: Plain text
 #: upstream/_posts/2021-06-30-quarkus-2-0-0-final-released.adoc:22
@@ -70,7 +70,7 @@ msgstr ""
 #: upstream/_posts/2021-06-30-quarkus-2-0-0-final-released.adoc:25
 #, no-wrap
 msgid "What's new?"
-msgstr ""
+msgstr "変更点"
 
 #. type: Plain text
 #: upstream/_posts/2021-06-30-quarkus-2-0-0-final-released.adoc:28
@@ -86,17 +86,17 @@ msgstr ""
 #: upstream/_posts/2021-06-30-quarkus-2-0-0-final-released.adoc:33
 #, no-wrap
 msgid "JDK 11 as minimal version"
-msgstr ""
+msgstr "最小バージョンとしてのJDK 11"
 
 #. type: Plain text
 #: upstream/_posts/2021-06-30-quarkus-2-0-0-final-released.adoc:36
 msgid "JDK 11 is the minimal version to use Quarkus 2.0."
-msgstr ""
+msgstr "JDK 11が、Quarkus 2.0を使用するための最小バージョンになりました。"
 
 #. type: Plain text
 #: upstream/_posts/2021-06-30-quarkus-2-0-0-final-released.adoc:38
 msgid "JDK 8 is not supported anymore (but you can keep using 1.13.x if you are stuck with it!)."
-msgstr ""
+msgstr "JDK 8はもうサポートされていません（ただし、1.13.xにこだわっている方は使い続けることができます！）。"
 
 #. type: Title ===
 #: upstream/_posts/2021-06-30-quarkus-2-0-0-final-released.adoc:39
@@ -113,44 +113,44 @@ msgstr ""
 #: upstream/_posts/2021-06-30-quarkus-2-0-0-final-released.adoc:43
 #, no-wrap
 msgid "Vert.x 4"
-msgstr ""
+msgstr "Vert.x 4"
 
 #. type: Plain text
 #: upstream/_posts/2021-06-30-quarkus-2-0-0-final-released.adoc:46
 msgid "Vert.x is at the core of Quarkus."
-msgstr ""
+msgstr "Vert.xはQuarkusの中核です。"
 
 #. type: Plain text
 #: upstream/_posts/2021-06-30-quarkus-2-0-0-final-released.adoc:49
 msgid "Quarkus 2.0 brings Vert.x 4.  You can learn more about it in https://vertx.io/blog/eclipse-vert-x-4-released/[the announcement] and the https://vertx.io/blog/whats-new-in-vert-x-4/[What's new blog post]."
-msgstr ""
+msgstr "Quarkus 2.0はVert.x 4を搭載しています。詳細は link:https://vertx.io/blog/eclipse-vert-x-4-released/[アナウンス]と link:https://vertx.io/blog/whats-new-in-vert-x-4/[変更点のブログ記事]でご覧いただけます。"
 
 #. type: Title ===
 #: upstream/_posts/2021-06-30-quarkus-2-0-0-final-released.adoc:50
 #, no-wrap
 msgid "Eclipse MicroProfile 4"
-msgstr ""
+msgstr "Eclipse MicroProfile 4"
 
 #. type: Plain text
 #: upstream/_posts/2021-06-30-quarkus-2-0-0-final-released.adoc:53
 msgid "MicroProfile 4 is the latest evolution of the https://github.com/eclipse/microprofile/releases/tag/4.0[MicroProfile specifications]."
-msgstr ""
+msgstr "MicroProfile 4は、 link:https://github.com/eclipse/microprofile/releases/tag/4.0[MicroProfile仕様]の最新版です。"
 
 #. type: Plain text
 #: upstream/_posts/2021-06-30-quarkus-2-0-0-final-released.adoc:56
 msgid "All the SmallRye components in Quarkus have been updated to the latest and greatest and, apart from implementing MicroProfile 4, they also come with additional new features."
-msgstr ""
+msgstr "QuarkusのSmallRyeコンポーネントはすべて最新のものにアップデートされており、MicroProfile 4を実装しているだけでなく、追加の新機能も搭載されています。"
 
 #. type: Title ===
 #: upstream/_posts/2021-06-30-quarkus-2-0-0-final-released.adoc:57
 #, no-wrap
 msgid "Continuous Testing"
-msgstr ""
+msgstr "継続的テスト"
 
 #. type: Plain text
 #: upstream/_posts/2021-06-30-quarkus-2-0-0-final-released.adoc:60
 msgid "I'll let the stage to Stuart Douglas for that one as he's the author of this amazing new feature."
-msgstr ""
+msgstr "この素晴らしい新機能を開発したのはStuart Douglas氏なので、彼にお任せします。"
 
 #. type: Plain text
 #: upstream/_posts/2021-06-30-quarkus-2-0-0-final-released.adoc:67
@@ -160,22 +160,22 @@ msgstr ""
 #. type: Plain text
 #: upstream/_posts/2021-06-30-quarkus-2-0-0-final-released.adoc:69
 msgid "This feature has also introduced some changes that may affect your application:"
-msgstr ""
+msgstr "また、この機能はいくつか変更点をもたらすため、お客様のアプリケーションに影響を与える可能性があります。"
 
 #. type: Plain text
 #: upstream/_posts/2021-06-30-quarkus-2-0-0-final-released.adoc:73
 msgid "The Class Loading model for testing is now the same as development mode (as tests need to be hot reloaded), if this causes issues for your application you can set `quarkus.test.flat-class-path=true` to revert to the old model, but it will disable continuous testing."
-msgstr ""
+msgstr "テスト用のクラス・ローディング・モデルは、開発モードと同じになりました（テストはホット・リロードが必要なため）。もしこのモデルがアプリケーションに問題を起こすようであれば、 `quarkus.test.flat-class-path=true` を設定して古いモデルに戻すことができますが、継続的なテストは無効になります。"
 
 #. type: Plain text
 #: upstream/_posts/2021-06-30-quarkus-2-0-0-final-released.adoc:76
 msgid "If a compatible terminal is detected Quarkus will display status messages at the bottom of the console window, and react to input without the need to press enter. If this interferes with your application it can be disabled via `quarkus.test.basic-console=true` (note that gradle will always use the basic console at this time)."
-msgstr ""
+msgstr "互換性のある端末が検出された場合、Quarkusはコンソールウィンドウの下部にステータスメッセージを表示し、Enterキーを押すことなく入力に反応します。これがアプリケーションの邪魔になる場合は、 `quarkus.test.basic-console=true` で無効にすることができます（現時点では、gradleは常に基本コンソールを使用することに注意してください）。"
 
 #. type: Plain text
 #: upstream/_posts/2021-06-30-quarkus-2-0-0-final-released.adoc:78
 msgid "If you don't want any test output in the console and just want to interact through the Dev UI you can set `quarkus.test.console=false`."
-msgstr ""
+msgstr "コンソールでのテスト出力を必要とせず、開発者用のUIで対話したい場合は、 `quarkus.test.console=false` を設定します。"
 
 #. type: Plain text
 #: upstream/_posts/2021-06-30-quarkus-2-0-0-final-released.adoc:81
@@ -185,7 +185,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_posts/2021-06-30-quarkus-2-0-0-final-released.adoc:83
 msgid "Here is a video presenting Continuous Testing in motion:"
-msgstr ""
+msgstr "ここでは、継続的テストの動作を紹介するビデオを紹介します。"
 
 #. type: Title ===
 #: upstream/_posts/2021-06-30-quarkus-2-0-0-final-released.adoc:86
@@ -248,7 +248,7 @@ msgstr ""
 #: upstream/_posts/2021-06-30-quarkus-2-0-0-final-released.adoc:104
 #, no-wrap
 msgid "Full Changelog"
-msgstr ""
+msgstr "完全な変更履歴"
 
 #. type: Plain text
 #: upstream/_posts/2021-06-30-quarkus-2-0-0-final-released.adoc:107
@@ -294,7 +294,7 @@ msgstr ""
 #: upstream/_posts/2021-06-30-quarkus-2-0-0-final-released.adoc:116
 #, no-wrap
 msgid "Contributors"
-msgstr ""
+msgstr "コントリビューター"
 
 #. type: Plain text
 #: upstream/_posts/2021-06-30-quarkus-2-0-0-final-released.adoc:120
@@ -310,34 +310,34 @@ msgstr ""
 #: upstream/_posts/2021-06-30-quarkus-2-0-0-final-released.adoc:123
 #, no-wrap
 msgid "Come Join Us"
-msgstr ""
+msgstr "参加のお誘い"
 
 #. type: Plain text
 #: upstream/_posts/2021-06-30-quarkus-2-0-0-final-released.adoc:126
 msgid "We value your feedback a lot so please report bugs, ask for improvements... Let's build something great together!"
-msgstr ""
+msgstr "私達は皆様からのフィードバックに重きを置いています。バグ報告、改善要望を是非お願いします。一緒に素晴らしいものを作り上げていきましょう!"
 
 #. type: Plain text
 #: upstream/_posts/2021-06-30-quarkus-2-0-0-final-released.adoc:128
 msgid "If you are a Quarkus user or just curious, don't be shy and join our welcoming community:"
-msgstr ""
+msgstr "Quarkusユーザーの場合でも、単に興味を持っているだけの場合でも、恥ずかしがらずにコミュニティに参加して下さい!:"
 
 #. type: Plain text
 #: upstream/_posts/2021-06-30-quarkus-2-0-0-final-released.adoc:130
 msgid "provide feedback on https://github.com/quarkusio/quarkus/issues[GitHub];"
-msgstr ""
+msgstr "https://github.com/quarkusio/quarkus/issues[GitHub] でフィードバック"
 
 #. type: Plain text
 #: upstream/_posts/2021-06-30-quarkus-2-0-0-final-released.adoc:131
 msgid "craft some code and https://github.com/quarkusio/quarkus/pulls[push a PR];"
-msgstr ""
+msgstr "コードを作成し、 https://github.com/quarkusio/quarkus/pulls[プルリクエスト] を送信"
 
 #. type: Plain text
 #: upstream/_posts/2021-06-30-quarkus-2-0-0-final-released.adoc:132
 msgid "discuss with us on https://quarkusio.zulipchat.com/[Zulip] and on the https://groups.google.com/d/forum/quarkus-dev[mailing list];"
-msgstr ""
+msgstr "https://quarkusio.zulipchat.com/[Zulip] や https://groups.google.com/d/forum/quarkus-dev[メーリングリスト] でディスカッションに参加"
 
 #. type: Plain text
 #: upstream/_posts/2021-06-30-quarkus-2-0-0-final-released.adoc:132
 msgid "ask your questions on https://stackoverflow.com/questions/tagged/quarkus[Stack Overflow]."
-msgstr ""
+msgstr "https://stackoverflow.com/questions/tagged/quarkus[Stack Overflow] で質問"
