--- a/l10n/po/ja_JP/_generated-config/latest/config/quarkus-kafka-client.adoc.po
+++ b/l10n/po/ja_JP/_generated-config/latest/config/quarkus-kafka-client.adoc.po
@@ -109,7 +109,7 @@ msgstr ""
 #: upstream/_generated-config/latest/config/quarkus-kafka-client.adoc:47
 #, no-wrap
 msgid "int"
-msgstr ""
+msgstr "int"
 
 #. type: Table
 #: upstream/_generated-config/latest/config/quarkus-kafka-client.adoc:55
@@ -127,7 +127,7 @@ msgstr ""
 #: upstream/_generated-config/latest/config/quarkus-kafka-client.adoc:56
 #, no-wrap
 msgid "string"
-msgstr ""
+msgstr "string"
 
 #. type: Table
 #: upstream/_generated-config/latest/config/quarkus-kafka-client.adoc:58
