--- a/l10n/po/ja_JP/_generated-config/latest/config/quarkus-keycloak-keycloak-poilcy-enforcer-build-time-config.adoc.po
+++ b/l10n/po/ja_JP/_generated-config/latest/config/quarkus-keycloak-keycloak-poilcy-enforcer-build-time-config.adoc.po
@@ -31,13 +31,13 @@ msgstr ""
 #: upstream/_generated-config/latest/config/quarkus-keycloak-keycloak-poilcy-enforcer-build-time-config.adoc:9
 #, no-wrap
 msgid "Type"
-msgstr ""
+msgstr "タイプ"
 
 #. type: Table
 #: upstream/_generated-config/latest/config/quarkus-keycloak-keycloak-poilcy-enforcer-build-time-config.adoc:11
 #, no-wrap
 msgid "Default"
-msgstr ""
+msgstr "デフォルト"
 
 #. type: Table
 #: upstream/_generated-config/latest/config/quarkus-keycloak-keycloak-poilcy-enforcer-build-time-config.adoc:16
@@ -55,10 +55,10 @@ msgstr ""
 #: upstream/_generated-config/latest/config/quarkus-keycloak-keycloak-poilcy-enforcer-build-time-config.adoc:17
 #, no-wrap
 msgid "boolean"
-msgstr ""
+msgstr "boolean"
 
 #. type: Table
 #: upstream/_generated-config/latest/config/quarkus-keycloak-keycloak-poilcy-enforcer-build-time-config.adoc:19
 #, no-wrap
 msgid "`false`"
-msgstr ""
+msgstr "`false`"
