--- a/l10n/po/ja_JP/_generated-config/latest/config/quarkus-mongodb-config-group-dev-services-build-time-config.adoc.po
+++ b/l10n/po/ja_JP/_generated-config/latest/config/quarkus-mongodb-config-group-dev-services-build-time-config.adoc.po
@@ -31,13 +31,13 @@ msgstr ""
 #: upstream/_generated-config/latest/config/quarkus-mongodb-config-group-dev-services-build-time-config.adoc:9
 #, no-wrap
 msgid "Type"
-msgstr ""
+msgstr "タイプ"
 
 #. type: Table
 #: upstream/_generated-config/latest/config/quarkus-mongodb-config-group-dev-services-build-time-config.adoc:11
 #, no-wrap
 msgid "Default"
-msgstr ""
+msgstr "デフォルト"
 
 #. type: Table
 #: upstream/_generated-config/latest/config/quarkus-mongodb-config-group-dev-services-build-time-config.adoc:16
@@ -55,7 +55,7 @@ msgstr ""
 #: upstream/_generated-config/latest/config/quarkus-mongodb-config-group-dev-services-build-time-config.adoc:17
 #, no-wrap
 msgid "boolean"
-msgstr ""
+msgstr "boolean"
 
 #. type: Table
 #: upstream/_generated-config/latest/config/quarkus-mongodb-config-group-dev-services-build-time-config.adoc:25
@@ -73,7 +73,7 @@ msgstr ""
 #: upstream/_generated-config/latest/config/quarkus-mongodb-config-group-dev-services-build-time-config.adoc:26
 #, no-wrap
 msgid "string"
-msgstr ""
+msgstr "string"
 
 #. type: Table
 #: upstream/_generated-config/latest/config/quarkus-mongodb-config-group-dev-services-build-time-config.adoc:35
@@ -92,4 +92,4 @@ msgstr ""
 #: upstream/_generated-config/latest/config/quarkus-mongodb-config-group-dev-services-build-time-config.adoc:36
 #, no-wrap
 msgid "int"
-msgstr ""
+msgstr "int"
