--- a/l10n/po/ja_JP/_generated-config/latest/config/quarkus-mongodb-mongo-client-build-time-config.adoc.po
+++ b/l10n/po/ja_JP/_generated-config/latest/config/quarkus-mongodb-mongo-client-build-time-config.adoc.po
@@ -139,7 +139,7 @@ msgstr ""
 #: upstream/_generated-config/latest/config/quarkus-mongodb-mongo-client-build-time-config.adoc:62
 #, no-wrap
 msgid "string"
-msgstr ""
+msgstr "string"
 
 #. type: Table
 #: upstream/_generated-config/latest/config/quarkus-mongodb-mongo-client-build-time-config.adoc:71
@@ -158,4 +158,4 @@ msgstr ""
 #: upstream/_generated-config/latest/config/quarkus-mongodb-mongo-client-build-time-config.adoc:72
 #, no-wrap
 msgid "int"
-msgstr ""
+msgstr "int"
