--- a/l10n/po/ja_JP/_generated-config/latest/config/quarkus-netty.adoc.po
+++ b/l10n/po/ja_JP/_generated-config/latest/config/quarkus-netty.adoc.po
@@ -31,13 +31,13 @@ msgstr ""
 #: upstream/_generated-config/latest/config/quarkus-netty.adoc:9
 #, no-wrap
 msgid "Type"
-msgstr ""
+msgstr "タイプ"
 
 #. type: Table
 #: upstream/_generated-config/latest/config/quarkus-netty.adoc:11
 #, no-wrap
 msgid "Default"
-msgstr ""
+msgstr "デフォルト"
 
 #. type: Table
 #: upstream/_generated-config/latest/config/quarkus-netty.adoc:16
@@ -55,4 +55,4 @@ msgstr ""
 #: upstream/_generated-config/latest/config/quarkus-netty.adoc:17
 #, no-wrap
 msgid "int"
-msgstr ""
+msgstr "int"
