--- a/l10n/po/ja_JP/_generated-config/latest/config/quarkus-oidc-client-filter.adoc.po
+++ b/l10n/po/ja_JP/_generated-config/latest/config/quarkus-oidc-client-filter.adoc.po
@@ -79,4 +79,4 @@ msgstr ""
 #: upstream/_generated-config/latest/config/quarkus-oidc-client-filter.adoc:26
 #, no-wrap
 msgid "string"
-msgstr ""
+msgstr "string"
