--- a/l10n/po/ja_JP/_generated-config/latest/config/quarkus-oidc-token-propagation-oidc-token-propagation-config.adoc.po
+++ b/l10n/po/ja_JP/_generated-config/latest/config/quarkus-oidc-token-propagation-oidc-token-propagation-config.adoc.po
@@ -121,4 +121,4 @@ msgstr ""
 #: upstream/_generated-config/latest/config/quarkus-oidc-token-propagation-oidc-token-propagation-config.adoc:53
 #, no-wrap
 msgid "string"
-msgstr ""
+msgstr "string"
