--- a/l10n/po/ja_JP/_generated-config/latest/config/quarkus-oidc-token-propagation.adoc.po
+++ b/l10n/po/ja_JP/_generated-config/latest/config/quarkus-oidc-token-propagation.adoc.po
@@ -140,4 +140,4 @@ msgstr ""
 #: upstream/_generated-config/latest/config/quarkus-oidc-token-propagation.adoc:62
 #, no-wrap
 msgid "string"
-msgstr ""
+msgstr "string"
