--- a/l10n/po/ja_JP/_generated-config/latest/config/quarkus-opentelemetry-config-group-tracing-tracer-config.adoc.po
+++ b/l10n/po/ja_JP/_generated-config/latest/config/quarkus-opentelemetry-config-group-tracing-tracer-config.adoc.po
@@ -31,13 +31,13 @@ msgstr ""
 #: upstream/_generated-config/latest/config/quarkus-opentelemetry-config-group-tracing-tracer-config.adoc:9
 #, no-wrap
 msgid "Type"
-msgstr ""
+msgstr "タイプ"
 
 #. type: Table
 #: upstream/_generated-config/latest/config/quarkus-opentelemetry-config-group-tracing-tracer-config.adoc:11
 #, no-wrap
 msgid "Default"
-msgstr ""
+msgstr "デフォルト"
 
 #. type: Table
 #: upstream/_generated-config/latest/config/quarkus-opentelemetry-config-group-tracing-tracer-config.adoc:17
@@ -56,7 +56,7 @@ msgstr ""
 #: upstream/_generated-config/latest/config/quarkus-opentelemetry-config-group-tracing-tracer-config.adoc:18
 #, no-wrap
 msgid "boolean"
-msgstr ""
+msgstr "boolean"
 
 #. type: Table
 #: upstream/_generated-config/latest/config/quarkus-opentelemetry-config-group-tracing-tracer-config.adoc:28
