--- a/l10n/po/ja_JP/_generated-config/latest/config/quarkus-redis-client-config-group-dev-services-config.adoc.po
+++ b/l10n/po/ja_JP/_generated-config/latest/config/quarkus-redis-client-config-group-dev-services-config.adoc.po
@@ -31,13 +31,13 @@ msgstr ""
 #: upstream/_generated-config/latest/config/quarkus-redis-client-config-group-dev-services-config.adoc:9
 #, no-wrap
 msgid "Type"
-msgstr ""
+msgstr "タイプ"
 
 #. type: Table
 #: upstream/_generated-config/latest/config/quarkus-redis-client-config-group-dev-services-config.adoc:11
 #, no-wrap
 msgid "Default"
-msgstr ""
+msgstr "デフォルト"
 
 #. type: Table
 #: upstream/_generated-config/latest/config/quarkus-redis-client-config-group-dev-services-config.adoc:17
@@ -57,14 +57,14 @@ msgstr ""
 #: upstream/_generated-config/latest/config/quarkus-redis-client-config-group-dev-services-config.adoc:47
 #, no-wrap
 msgid "boolean"
-msgstr ""
+msgstr "boolean"
 
 #. type: Table
 #: upstream/_generated-config/latest/config/quarkus-redis-client-config-group-dev-services-config.adoc:21
 #: upstream/_generated-config/latest/config/quarkus-redis-client-config-group-dev-services-config.adoc:50
 #, no-wrap
 msgid "`true`"
-msgstr ""
+msgstr "`true`"
 
 #. type: Table
 #: upstream/_generated-config/latest/config/quarkus-redis-client-config-group-dev-services-config.adoc:26
@@ -83,7 +83,7 @@ msgstr ""
 #: upstream/_generated-config/latest/config/quarkus-redis-client-config-group-dev-services-config.adoc:56
 #, no-wrap
 msgid "string"
-msgstr ""
+msgstr "string"
 
 #. type: Table
 #: upstream/_generated-config/latest/config/quarkus-redis-client-config-group-dev-services-config.adoc:36
@@ -103,7 +103,7 @@ msgstr ""
 #: upstream/_generated-config/latest/config/quarkus-redis-client-config-group-dev-services-config.adoc:66
 #, no-wrap
 msgid "int"
-msgstr ""
+msgstr "int"
 
 #. type: Table
 #: upstream/_generated-config/latest/config/quarkus-redis-client-config-group-dev-services-config.adoc:46
