--- a/l10n/po/ja_JP/_generated-config/latest/config/quarkus-rest-client-reactive-rest-client-reactive-config.adoc.po
+++ b/l10n/po/ja_JP/_generated-config/latest/config/quarkus-rest-client-reactive-rest-client-reactive-config.adoc.po
@@ -79,10 +79,10 @@ msgstr ""
 #: upstream/_generated-config/latest/config/quarkus-rest-client-reactive-rest-client-reactive-config.adoc:26
 #, no-wrap
 msgid "boolean"
-msgstr ""
+msgstr "boolean"
 
 #. type: Table
 #: upstream/_generated-config/latest/config/quarkus-rest-client-reactive-rest-client-reactive-config.adoc:28
 #, no-wrap
 msgid "`false`"
-msgstr ""
+msgstr "`false`"
