--- a/l10n/po/ja_JP/_generated-config/latest/config/quarkus-smallrye-reactivemessaging-kafka.adoc.po
+++ b/l10n/po/ja_JP/_generated-config/latest/config/quarkus-smallrye-reactivemessaging-kafka.adoc.po
@@ -31,13 +31,13 @@ msgstr ""
 #: upstream/_generated-config/latest/config/quarkus-smallrye-reactivemessaging-kafka.adoc:9
 #, no-wrap
 msgid "Type"
-msgstr ""
+msgstr "タイプ"
 
 #. type: Table
 #: upstream/_generated-config/latest/config/quarkus-smallrye-reactivemessaging-kafka.adoc:11
 #, no-wrap
 msgid "Default"
-msgstr ""
+msgstr "デフォルト"
 
 #. type: Table
 #: upstream/_generated-config/latest/config/quarkus-smallrye-reactivemessaging-kafka.adoc:16
@@ -55,10 +55,10 @@ msgstr ""
 #: upstream/_generated-config/latest/config/quarkus-smallrye-reactivemessaging-kafka.adoc:17
 #, no-wrap
 msgid "boolean"
-msgstr ""
+msgstr "boolean"
 
 #. type: Table
 #: upstream/_generated-config/latest/config/quarkus-smallrye-reactivemessaging-kafka.adoc:19
 #, no-wrap
 msgid "`true`"
-msgstr ""
+msgstr "`true`"
