--- a/l10n/po/ja_JP/_generated-config/latest/config/quarkus-vault-general-config-items.adoc.po
+++ b/l10n/po/ja_JP/_generated-config/latest/config/quarkus-vault-general-config-items.adoc.po
@@ -139,7 +139,7 @@ msgstr ""
 #: upstream/_generated-config/latest/config/quarkus-vault-general-config-items.adoc:37
 #, no-wrap
 msgid "int"
-msgstr ""
+msgstr "int"
 
 #. type: Table
 #: upstream/_generated-config/latest/config/quarkus-vault-general-config-items.adoc:45
