--- a/l10n/po/ja_JP/_generated-config/latest/config/quarkus-vertx-config-vertx-configuration.adoc.po
+++ b/l10n/po/ja_JP/_generated-config/latest/config/quarkus-vertx-config-vertx-configuration.adoc.po
@@ -252,7 +252,7 @@ msgstr ""
 #: upstream/_generated-config/latest/config/quarkus-vertx-config-vertx-configuration.adoc:101
 #, no-wrap
 msgid "float"
-msgstr ""
+msgstr "float"
 
 #. type: Table
 #: upstream/_generated-config/latest/config/quarkus-vertx-config-vertx-configuration.adoc:104
