--- a/l10n/po/ja_JP/_guides/grpc-service-consumption.adoc.po
+++ b/l10n/po/ja_JP/_guides/grpc-service-consumption.adoc.po
@@ -253,7 +253,7 @@ msgstr "ブロッキングスタブ"
 #: upstream/_guides/grpc-service-consumption.adoc:105
 #, no-wrap
 msgid "---\n"
-msgstr ""
+msgstr "—\n"
 
 #. type: delimited block -
 #: upstream/_guides/grpc-service-consumption.adoc:107
