--- a/l10n/po/ja_JP/_guides/kafka-schema-registry-avro.adoc.po
+++ b/l10n/po/ja_JP/_guides/kafka-schema-registry-avro.adoc.po
@@ -39,22 +39,22 @@ msgstr ""
 #: upstream/_guides/kafka-schema-registry-avro.adoc:16
 #, no-wrap
 msgid "Prerequisites"
-msgstr ""
+msgstr "前提条件"
 
 #. type: Plain text
 #: upstream/_guides/kafka-schema-registry-avro.adoc:19
 msgid "To complete this guide, you need:"
-msgstr ""
+msgstr "このガイドを完成させるには、以下が必要です:"
 
 #. type: Plain text
 #: upstream/_guides/kafka-schema-registry-avro.adoc:21
 msgid "less than 30 minutes"
-msgstr ""
+msgstr "三十分以内"
 
 #. type: Plain text
 #: upstream/_guides/kafka-schema-registry-avro.adoc:22
 msgid "an IDE"
-msgstr ""
+msgstr "IDE"
 
 #. type: Plain text
 #: upstream/_guides/kafka-schema-registry-avro.adoc:23
@@ -64,7 +64,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_guides/kafka-schema-registry-avro.adoc:24
 msgid "Apache Maven {maven-version}"
-msgstr ""
+msgstr "Apache Maven {maven-version}"
 
 #. type: Plain text
 #: upstream/_guides/kafka-schema-registry-avro.adoc:25
@@ -74,13 +74,13 @@ msgstr ""
 #. type: Plain text
 #: upstream/_guides/kafka-schema-registry-avro.adoc:26
 msgid "GraalVM installed if you want to run in native mode."
-msgstr ""
+msgstr "ネイティブモードで動作させたい場合は、GraalVMがインストールされていること"
 
 #. type: Title ==
 #: upstream/_guides/kafka-schema-registry-avro.adoc:28
 #, no-wrap
 msgid "Architecture"
-msgstr ""
+msgstr "アーキテクチャ"
 
 #. type: Plain text
 #: upstream/_guides/kafka-schema-registry-avro.adoc:32
@@ -101,17 +101,17 @@ msgstr ""
 #: upstream/_guides/kafka-schema-registry-avro.adoc:41
 #, no-wrap
 msgid "Solution"
-msgstr ""
+msgstr "ソリューション"
 
 #. type: Plain text
 #: upstream/_guides/kafka-schema-registry-avro.adoc:45
 msgid "We recommend that you follow the instructions in the next sections and create the application step by step.  However, you can go right to the completed example."
-msgstr ""
+msgstr "次の章で紹介する手順に沿って、ステップを踏んでアプリを作成することをお勧めします。ただし、完成した例にそのまま進んでも構いません。"
 
 #. type: Plain text
 #: upstream/_guides/kafka-schema-registry-avro.adoc:47
 msgid "Clone the Git repository: `git clone {quickstarts-clone-url}`, or download an {quickstarts-archive-url}[archive]."
-msgstr ""
+msgstr "Gitレポジトリをクローンするか `git clone {quickstarts-clone-url}` 、 {quickstarts-archive-url}[アーカイブ] をダウンロードします。"
 
 #. type: Plain text
 #: upstream/_guides/kafka-schema-registry-avro.adoc:49
@@ -127,7 +127,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_guides/kafka-schema-registry-avro.adoc:53
 msgid "First, we need a new project. Create a new project with the following command:"
-msgstr ""
+msgstr "まず、新しいプロジェクトが必要です。以下のコマンドで新規プロジェクトを作成します。"
 
 #. type: delimited block -
 #: upstream/_guides/kafka-schema-registry-avro.adoc:63
@@ -262,7 +262,7 @@ msgstr ""
 #: upstream/_guides/kafka-schema-registry-avro.adoc:557
 #, no-wrap
 msgid "package org.acme.kafka;\n"
-msgstr ""
+msgstr "package org.acme.kafka;\n"
 
 #. type: delimited block -
 #: upstream/_guides/kafka-schema-registry-avro.adoc:155
@@ -471,7 +471,7 @@ msgstr ""
 #: upstream/_guides/kafka-schema-registry-avro.adoc:259
 #, no-wrap
 msgid "Running the application"
-msgstr ""
+msgstr "アプリケーションの実行"
 
 #. type: Plain text
 #: upstream/_guides/kafka-schema-registry-avro.adoc:262
@@ -599,13 +599,13 @@ msgstr ""
 #: upstream/_guides/kafka-schema-registry-avro.adoc:329
 #, no-wrap
 msgid "version: '2'\n"
-msgstr ""
+msgstr "version: '2'\n"
 
 #. type: delimited block -
 #: upstream/_guides/kafka-schema-registry-avro.adoc:331
 #, no-wrap
 msgid "services:\n"
-msgstr ""
+msgstr "services:\n"
 
 #. type: delimited block -
 #: upstream/_guides/kafka-schema-registry-avro.adoc:342
@@ -1095,7 +1095,7 @@ msgstr ""
 #: upstream/_guides/kafka-schema-registry-avro.adoc:628
 #, no-wrap
 msgid "Further reading"
-msgstr ""
+msgstr "さらに詳しく"
 
 #. type: Plain text
 #: upstream/_guides/kafka-schema-registry-avro.adoc:631
